--- a/src/main/resources/templates/visualize.html
+++ b/src/main/resources/templates/visualize.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <!--<script src="/js/echarts.js" type="application/javascript"></script>-->
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
+    <!--<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>-->
     <!--<script src="http://echarts.baidu.com/build/dist/echarts.js"></script>-->
     <script src="/js/jquery.js" type="application/javascript"></script>
+    <script src="/js/echarts.js" type="application/javascript"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/jquery.pagination.js"></script>
 </head>
-
-https://www.cnblogs.com/sweeeper/p/11957165.html
 <body>
+<!--https://www.cnblogs.com/sweeeper/p/11957165.html-->
+
 <div th:insert="~{navigation :: nav}"></div>
 <div class="container-fluid">
     <div class="row">
@@ -37,13 +39,13 @@ https://www.cnblogs.com/sweeeper/p/11957165.html
                     </tr>
                     <tr th:each="order : ${orders}">
                         <td th:text="${order.id}"></td>
-                        <td th:text="${order.carId}"></td>
-                        <td th:text="${order.appointTime}"></td>
+                        <td th:text="${order.carid}"></td>
+                        <td th:text="${order.appointtime}"></td>
                         <td th:text="${order.charge}"></td>
-                        <td th:text="${order.startDate}"></td>
-                        <td th:text="${order.startHour}"></td>
-                        <td th:text="${order.endDate}"></td>
-                        <td th:text="${order.endHour}"></td>
+                        <td th:text="${order.startdate}"></td>
+                        <td th:text="${order.starthour}"></td>
+                        <td th:text="${order.enddate}"></td>
+                        <td th:text="${order.endhour}"></td>
 
 
                     </tr>
@@ -65,142 +67,25 @@ https://www.cnblogs.com/sweeeper/p/11957165.html
                     </li>
                 </ul>
             </nav>
+            <!--<div class="M-box"></div>-->
+
+            <!--<script>-->
+                <!--$('.M-box').pagination({-->
+                    <!--callback: function (api) {-->
+                        <!--$('.now').text(api.getCurrent());-->
+                    <!--}-->
+                <!--}, function (api) {-->
+                    <!--$('.now').text(api.getCurrent());-->
+                <!--});-->
+            <!--</script>-->
         </div>
 
         <div class="col-lg-4">
             <h3>可视化</h3>
+            <button type="button" class="btn btn-success pull-right" onclick="submit_notice()">生成折线图</button>
             <img src="https://img2018.cnblogs.com/blog/712416/201911/712416-20191129131849517-1333294750.png" alt="">
             <div id="echarts"></div>
-            <script>drawLeftLine()</script>
-            <script type="text/javascript">
-                function drawLeftLine(){
-                    let drawLine = echarts.init(document.getElementById('data-left-middle-table-wrap'));
-                    let option = null;
-                    option = {
-                        tooltip: {
-                            trigger: 'axis'
-                        },
-                        color:['#52F478','#FFCD8B'],
-                        icon: "circle",
-                        legend: {
-                            x:'200px',
-                            y:'10px',
-                            data:['进车辆','出车辆'],
-                            textStyle:{
-                                fontSize: 14,//字体大小
-                                color: '#BBF6FF'//字体颜色
-                            },
 
-                        },
-                        grid: {
-                            left: '0px',
-                            // right: '0px',
-                            bottom: '0px',
-                            containLabel: true
-                        },
-                        xAxis: {
-                            type: 'category',
-                            name:'小时',
-                            nameGap:'15',
-                            show:true,
-                            boundaryGap:false,
-                            axisLabel:{
-                                textStyle:{
-                                    color:'#FFFFFF'
-                                }
-                            },
-                            splitArea : {
-                                show : false,
-                            },
-                            splitLine : {
-                                show :false,
-                            },
-                            axisLine:{
-                                lineStyle:{
-                                    color:'#BBF6FF',
-                                    width:2,
-                                },
-                                symbol:['none','arrow']
-                            },
-                            data: [0,2,4,6,8,10,12,14,16,18,20,22,24]
-                        },
-                        yAxis: {
-                            type: 'value',
-                            name:'数量',
-                            show:true,
-                            axisLabel:{
-                                textStyle:{
-                                    color:'#FFFFFF'
-                                }
-                            },
-                            splitArea : {
-                                show : false,
-                            },
-                            splitLine : {
-                                show :false,
-                            },
-                            axisLine:{
-                                lineStyle:{
-                                    color:'#BBF6FF',
-                                    width:2,
-                                },
-                                symbol:['none','arrow']
-                            },
-                        },
-                        series: [
-                            {
-                                name:'进车辆',
-                                type: 'line',
-                                smooth: true,
-                                lineStyle:{
-                                    normal:{
-                                        color:'#4EEE79',
-                                        width:3
-                                    }
-                                },
-                                areaStyle: {
-                                    normal: {
-                                        color: new echarts.graphic.LinearGradient(0, 1, 0, 0, [{
-                                            offset: 0,
-                                            color: 'red'
-                                        }, {
-                                            offset: 1,
-                                            color: 'yellow'
-                                        }]),
-                                    },
-                                },
-                                data:[4,10, 40, 60, 100, 120,140,150,130,100,60,30,20]
-                            },
-                            {
-                                name:'出车辆',
-                                type:'line',
-                                smooth: true,
-                                lineStyle:{
-                                    normal:{
-                                        color:'#FFCD8B',
-                                        width:3
-                                    }
-                                },
-                                areaStyle: {
-                                    normal: {
-                                        color: new echarts.graphic.LinearGradient(0, 1, 0, 0, [{
-                                            offset: 0,
-                                            color: '#4B4558'
-                                        }, {
-                                            offset: 1,
-                                            color: '#516359'
-                                        }]),
-                                    },
-                                },
-                                data:[3,8, 30, 50, 110, 100,80,100,120,90,60,20,10]
-                            }
-                        ]
-                    };
-                    if (option && typeof option === "object") {
-                        drawLine.setOption(option);
-                    }
-                }
-            </script>
         </div>
     </div>
 
