--- a/src/main/resources/static/css/smart_parking.css
+++ b/src/main/resources/static/css/smart_parking.css
@@ -38,6 +38,37 @@
 }
 
 .map_div {
-    width: 1100px;
-    height: 400px;
+    width: 1000px;
+    height: 375px;
 }
+
+.codition{
+    position: fixed;
+    left: 300px;
+    bottom: 100px;
+    background-color: white;
+}
+
+.codition li{
+    list-style:none;
+}
+
+.codition span {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+.codition-red {
+    background-color: #f00;
+}
+
+.codition-green {
+    background-color: #0f0;
+}
+
+
+
