改动注释的微小改动

--- a/src/main/resources/templates/parkinglotDetail.html
+++ b/src/main/resources/templates/parkinglotDetail.html
@@ -90,6 +90,7 @@
         });
 
         map.on('mapClickNode', function (e) {
+            console.log(e);
             clickParkingSpace(e);
         });
         map.openMapById(10005);
